--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.6.5",
     "classnames": "^2.5.1",
     "next": "14.0.4",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-loading-skeleton": "^3.3.1",
     "react-query": "^3.39.3",
